@@ -1,5 +1,8 @@
 2016-09-16  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
+	* 39310/0002: Src/Zle/compmatch.c: internals: match_str:
+	Simplify by removing 'zoff'.
+
 	* 39310/0001: Src/Zle/compmatch.c: internals: match_str:
 	Document some local variables. See 39123.
 
